--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Education</title>
-    <link rel="stylesheet" href="e.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -33,5 +33,6 @@
    <script type="module" src="https://unpkg.com/@splinetool/viewer@1.10.48/build/spline-viewer.js"></script>
 
 </body>
+
 
 </html>
